--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="screen">
       <div id="game-container">
-        <div id="menu" class="hidden">
+        <div id="menu">
           <h1 class="title">Click the COLOR and not the WORD</h1>
           <h3 class="text">
             Five levels. Increasing distractions. Against the clock. All you
@@ -22,15 +22,15 @@
           <a class="button" id="play-button" href="#">Play</a>
         </div>
 
-        <div id="game">
-          <h1 class="title color-name">Red</h1>
+        <div id="game" class="hidden">
+          <h1 class="title color-name" id="random-word">Red</h1>
           <div class="centered-list">
             <a class="buttons" href="#">Green</a>
             <a class="buttons" href="#">Blue </a>
             <a class="buttons" href="#">Yellow</a>
             <a class="buttons" href="#">Pink </a>
             <a class="buttons" href="#"> Red </a>
-            <a class="buttons" href="#">Black</a>
+            <a class="buttons" href="#">Purple</a>
           </div>
         </div>
 
